Done Without Checkout

--- a/ITIGraduation/Views/Boots/Create.cshtml
+++ b/ITIGraduation/Views/Boots/Create.cshtml
@@ -25,7 +25,7 @@
             <input asp-for="ImagUrl" class="form-control" />
         </div>
         <button type="submit" class="btn btn-success">Create</button>
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
     </form>
     </div>
 
