--- a/ITIGraduation/Views/Products/Create.cshtml
+++ b/ITIGraduation/Views/Products/Create.cshtml
@@ -26,11 +26,11 @@
         <input asp-for="ImagUrl" class="form-control" />
     </div>
     <button type="submit" class="btn btn-success">Create</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" asp-fragment="ProductView">Back to List</a>
 </div>
 </div>
 @section Scripts {
