--- a/ITIGraduation/Views/Products/Delete.cshtml
+++ b/ITIGraduation/Views/Products/Delete.cshtml
@@ -23,6 +23,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProuductId" />
         <button type="submit" class="btn btn-danger">Delete</button>
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
