--- a/ITIGraduation/Views/Products/Edit.cshtml
+++ b/ITIGraduation/Views/Products/Edit.cshtml
@@ -26,7 +26,7 @@
         <input asp-for="ImagUrl" class="form-control" />
     </div>
     <button type="submit" class="btn btn-warning">Save Changes</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
 </form>
 
 </div>
