--- a/ITIGraduation/Views/Shared/_Layout.cshtml
+++ b/ITIGraduation/Views/Shared/_Layout.cshtml
@@ -303,6 +303,9 @@
                                         <a href="/TrendingSellings/index#ProductView" class="nav-link">Trending</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a href="/products/index#ProductView" class="nav-link">Best Sellings</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a href="/Boots/index#ProductView" class="nav-link">Boots</a>
                                     </li>
                                     <li class="nav-item">
