--- a/ITIGraduation/Views/TrendingSellings/Edit.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Edit.cshtml
@@ -39,7 +39,7 @@
             <input asp-for="Imag4" class="form-control" />
         </div>
         <button type="submit" class="btn btn-warning">Save Changes</button>
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
     </form>
 
 
