--- a/ITIGraduation/Views/TrendingSellings/Index.cshtml
+++ b/ITIGraduation/Views/TrendingSellings/Index.cshtml
@@ -13,7 +13,10 @@
 
 <div class="product_page" id="ProductView">
 
-    <h1>Trending Sellings</h1>
+    <h1>
+        Trending Products
+
+    </h1>
     @if (isAdmin)
     {
         <p>
@@ -64,9 +67,9 @@
                     <div class="btnsFromMe">
                         @if (isAdmin)
                         {
-                            <a asp-action="Edit" asp-route-id="@item.ProudId" class="btn Edit text-white ">Edit</a>
-                            <a asp-action="Details" asp-route-id="@item.ProudId" class="btn Details text-white">Details</a>
-                            <a asp-action="Delete" asp-route-id="@item.ProudId" class="btn Delete text-white ">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@item.ProudId" asp-fragment="ProductView" class="btn Edit text-white ">Edit</a>
+                            <a asp-action="Details" asp-route-id="@item.ProudId" asp-fragment="ProductView" class="btn Details text-white">Details</a>
+                            <a asp-action="Delete" asp-route-id="@item.ProudId" asp-fragment="ProductView" class="btn Delete text-white ">Delete</a>
                         }
                     </div>
                 </div>
