--- a/ITIGraduation/Views/Sports/Create.cshtml
+++ b/ITIGraduation/Views/Sports/Create.cshtml
@@ -3,7 +3,7 @@
 <div class="product_page" id="ProductView">
     <h2>Create Sport</h2>
 
-    <form asp-action="Create">
+    <form asp-action="Create" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="SportName"></label>
             <input asp-for="SportName" class="form-control" />
@@ -17,14 +17,16 @@
             <input asp-for="Price" class="form-control" />
         </div>
         <div class="form-group">
-            <label asp-for="ImagUrl"></label>
-            <input asp-for="ImagUrl" class="form-control" />
+            <label>Upload Image</label>
+            <input type="file" name="ImageFile" class="form-control" />
         </div>
         <button type="submit" class="btn btn-success">Create</button>
         <a asp-action="Index" asp-fragment="ProductView" class="btn btn-secondary">Cancel</a>
     </form>
-
+</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
