--- a/ITIGraduation/Views/Home/Search.cshtml
+++ b/ITIGraduation/Views/Home/Search.cshtml
@@ -35,7 +35,7 @@
                         <div class="col-md-4 col-lg-3">
                             <a asp-controller="Sports" asp-action="Details" asp-route-id="@s.SportId" asp-fragment="ProductView" class="card-link-wrapper">
                                 <div class="card h-100 shadow-sm card-hover">
-                                    <img src="@Url.Content(s.ImagUrl)" class="card-img-top" alt="@s.SportName" style="height:180px;object-fit:cover;">
+                                    <img src="@Url.Content(s.ImagUrl)" class="card-img-top flex-img" alt="@s.SportName">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title">@s.SportName</h5>
                                         <p class="card-text text-success fw-bold">@s.Price $</p>
@@ -54,7 +54,7 @@
                         <div class="col-md-4 col-lg-3">
                             <a asp-controller="Boots" asp-action="Details" asp-route-id="@b.BootId" asp-fragment="ProductView" class="card-link-wrapper">
                                 <div class="card h-100 shadow-sm card-hover">
-                                    <img src="@Url.Content(b.ImagUrl)" class="card-img-top" alt="@b.BootName" style="height:180px;object-fit:cover;">
+                                    <img src="@Url.Content(b.ImagUrl)" class="card-img-top flex-img" alt="@b.BootName">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title">@b.BootName</h5>
                                         <p class="card-text text-success fw-bold">@b.Price $</p>
@@ -73,7 +73,7 @@
                         <div class="col-md-4 col-lg-3">
                             <a asp-controller="TrendingSellings" asp-action="Details" asp-route-id="@t.ProudId" asp-fragment="ProductView" class="card-link-wrapper">
                                 <div class="card h-100 shadow-sm card-hover">
-                                    <img src="@Url.Content(t.ImagUrl)" class="card-img-top" alt="@t.ProudName" style="height:180px;object-fit:cover;">
+                                    <img src="@Url.Content(t.ImagUrl)" class="card-img-top flex-img" alt="@t.ProudName">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title">@t.ProudName</h5>
                                         <p class="card-text text-success fw-bold">@t.Price $</p>
@@ -92,7 +92,7 @@
                         <div class="col-md-4 col-lg-3">
                             <a asp-controller="Oxfords" asp-action="Details" asp-route-id="@o.OxfordId" asp-fragment="ProductView" class="card-link-wrapper">
                                 <div class="card h-100 shadow-sm card-hover">
-                                    <img src="@Url.Content(o.ImagUrl)" class="card-img-top" alt="@o.BootName" style="height:180px;object-fit:cover;">
+                                    <img src="@Url.Content(o.ImagUrl)" class="card-img-top flex-img" alt="@o.BootName">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title">@o.BootName</h5>
                                         <p class="card-text text-success fw-bold">@o.Price $</p>
@@ -119,6 +119,21 @@
             box-shadow: 0 0 0.75rem #007bff33;
             transform: translateY(-4px) scale(1.02);
             cursor: pointer;
+        }
+        .flex-img {
+            width: 100%;
+            height: auto;
+            object-fit: contain;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            max-height: 350px;
+        }
+        .card {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            min-height: 0;
         }
     </style>
 </div>
